Fix missing open in richtclient-bundle module-info